tests/NormalTests/paczka1/fuzzy1/27157606.err
Error in line 2: ZzSUKA A755 56,4
Error in line 9: C85f67lXO3 S843 79,3
Error in line 18: C85f67lXO3 A755 46,5
Error in line 12: gPwgn A755 58,6
Error in line 29: A755 A755 2,2
Error in line 33: A755 A356 33,8
